@@ -30,6 +30,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -52,6 +53,7 @@ import org.drools.io.BaseResource;
 import org.drools.io.FileSystemResource;
 import org.drools.io.ReaderResource;
 import org.kie.api.command.BatchExecutionCommand;
+import org.kie.api.command.Command;
 import org.kie.api.io.Resource;
 import org.kie.api.runtime.StatelessKieSession;
 import org.kie.dmn.api.core.DMNCompilerConfiguration;
@@ -190,6 +192,26 @@ public class DMNValidatorImpl implements DMNValidator {
         }
     }
 
+    static final Schema schemav1_6;
+
+    static {
+        try {
+            schemav1_6 = SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI)
+                    .newSchema(new Source[]{new StreamSource(DMNValidatorImpl.class.getResourceAsStream("org/omg/spec" +
+                                                                                                                "/DMN" +
+                                                                                                                "/20230324/DC.xsd")),
+                            new StreamSource(DMNValidatorImpl.class.getResourceAsStream("org/omg/spec/DMN/20230324/DI" +
+                                                                                                ".xsd")),
+                            new StreamSource(DMNValidatorImpl.class.getResourceAsStream("org/omg/spec/DMN/20230324" +
+                                                                                                "/DMNDI15.xsd")),
+                            new StreamSource(DMNValidatorImpl.class.getResourceAsStream("org/omg/spec/DMN/20240513" +
+                                                                                                "/DMN16.xsd"))
+                    });
+        } catch (SAXException e) {
+            throw new RuntimeException("Unable to initialize correctly DMNValidator.", e);
+        }
+    }
+
     static final Map<DMN_VERSION, Schema> DMNVERSION_SCHEMA_MAP;
 
     static {
@@ -199,7 +221,8 @@ public class DMNValidatorImpl implements DMNValidator {
         DMNVERSION_SCHEMA_MAP.put(DMN_VERSION.DMN_v1_3, schemav1_3);
         DMNVERSION_SCHEMA_MAP.put(DMN_VERSION.DMN_v1_4, schemav1_4);
         DMNVERSION_SCHEMA_MAP.put(DMN_VERSION.DMN_v1_5, schemav1_5);
-        DMNVERSION_SCHEMA_MAP.put(DMN_VERSION.UNKNOWN, schemav1_5);
+        DMNVERSION_SCHEMA_MAP.put(DMN_VERSION.DMN_v1_6, schemav1_6);
+        DMNVERSION_SCHEMA_MAP.put(DMN_VERSION.UNKNOWN, schemav1_6);
     }
 
     private Schema overrideSchema = null;
@@ -330,7 +353,7 @@ public class DMNValidatorImpl implements DMNValidator {
         @Override
         public List<DMNMessage> theseModels(Reader... readers) {
             Resource[] array =
-                    Arrays.stream(readers).map(ReaderResource::new).collect(Collectors.toList()).toArray(new Resource[]{});
+                    Arrays.stream(readers).map(ReaderResource::new).toList().toArray(new Resource[]{});
             return theseModels(array);
         }
 
@@ -691,19 +714,19 @@ public class DMNValidatorImpl implements DMNValidator {
                 .map(Import::getNamespace)
                 .toList();
         List<Definitions> otherModelsDefinitions = new ArrayList<>();
-        otherModels.forEach(dmnResource -> {
-            Definitions other = dmnResource.getDefinitions();
-            if (unnamedImports.contains(dmnResource.getModelID().getNamespaceURI())) {
-                mergeDefinitions(mainDefinitions, other);
+        otherModels.forEach(otherModel -> {
+            Definitions otherDefinitions = otherModel.getDefinitions();
+            if (unnamedImports.contains(otherModel.getModelID().getNamespaceURI())) {
+                mergeDefinitions(mainDefinitions, otherDefinitions);
             }
-            otherModelsDefinitions.add(other);
+            otherModelsDefinitions.add(otherDefinitions);
         });
 
         StatelessKieSession kieSession;
         // Pattern matching not available in Java 17
-        if (mainDefinitions instanceof org.kie.dmn.model.v1_1.KieDMNModelInstrumentedBase) {
+        if (mainDefinitions instanceof org.kie.dmn.model.v1_1.URIFEELed) {
             kieSession = kb11.newStatelessKieSession();
-        } else if (mainDefinitions instanceof org.kie.dmn.model.v1_2.KieDMNModelInstrumentedBase) {
+        } else if (mainDefinitions instanceof org.kie.dmn.model.v1_2.URIFEELed) {
             kieSession = kb12.newStatelessKieSession();
         } else {
             kieSession = kb13.newStatelessKieSession();
@@ -721,13 +744,45 @@ public class DMNValidatorImpl implements DMNValidator {
                 .collect(toList());
 
         BatchExecutionCommand batch =
-                CommandFactory.newBatchExecution(Arrays.asList(CommandFactory.newInsertElements(dmnModelElements,
-                                                                                                "DEFAULT", false,
-                                                                                                "DEFAULT"),
-                                                                                     CommandFactory.newInsertElements(otherModelsDefinitions, "DMNImports", false, "DMNImports")));
+                CommandFactory.newBatchExecution(getBatchExecutionCommands(dmnModelElements, otherModelsDefinitions, unnamedImports));
         kieSession.execute(batch);
-
         return reporter.getMessages().getMessages();
+    }
+
+    @SuppressWarnings("rawtypes")
+    private List<Command> getBatchExecutionCommands(List<DMNModelInstrumentedBase> dmnModelElements,
+                                                    List<Definitions> otherModelsDefinitions,
+                                                    List<String> unnamedImports) {
+       List<Command> toReturn = new ArrayList<>();
+       // inserting dmnModelElements as DEFAULT
+       toReturn.add(CommandFactory.newInsertElements(dmnModelElements,
+                                         "DEFAULT", false,
+                                         "DEFAULT"));
+        // inserting otherModelsDefinitions as DMNImports
+        toReturn.add(CommandFactory.newInsertElements(otherModelsDefinitions, "DMNImports", false, "DMNImports"));
+        //  inserting a Set of nested unnamed-imports as RelatedImports
+        Set<Definitions> nestedImports = new HashSet<>();
+        populateNestedUnnamedImports(nestedImports, otherModelsDefinitions, unnamedImports);
+        toReturn.add(CommandFactory.newInsertElements(nestedImports, "RelatedImports", false, "RelatedImports"));
+        return toReturn;
+    }
+
+    static void populateNestedUnnamedImports(Set<Definitions> toPopulate, List<Definitions> otherModelsDefinitions, List<String> unnamedImports) {
+        Set<Definitions> toIterate = otherModelsDefinitions.stream()
+                .filter(definitions -> unnamedImports.contains(definitions.getNamespace())).collect(Collectors.toSet());
+        populateNestedUnnamedImports(toPopulate, toIterate, otherModelsDefinitions);
+    }
+
+    static void populateNestedUnnamedImports(Set<Definitions> toPopulate, Import imported, List<Definitions> otherModelsDefinitions) {
+        Set<Definitions> toIterate = otherModelsDefinitions.stream().filter(definitions -> definitions.getNamespace().equals(imported.getNamespace())).collect(Collectors.toSet());
+        populateNestedUnnamedImports(toPopulate, toIterate, otherModelsDefinitions);
+    }
+
+    static void populateNestedUnnamedImports(Set<Definitions> toPopulate, Set<Definitions> toIterate, List<Definitions> otherModelsDefinitions) {
+        toIterate.forEach(definitionsToAdd -> {
+            toPopulate.add(definitionsToAdd);
+            definitionsToAdd.getImport().forEach(nestedImport -> populateNestedUnnamedImports(toPopulate, nestedImport, otherModelsDefinitions));
+        });
     }
 
     private List<DMNMessage> validateCompilation(DMNResource dmnR) {
